--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeAMTKl0qcajoZ_14PcNf5ZzRQSO1G1Gnh13efPlffb2QOxcg/viewform?usp=sf_link" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeAMTKl0qcajoZ_14PcNf5ZzRQSO1G1Gnh13efPlffb2QOxcg/viewform?usp=sf_link" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
       </div>
       <hr>
