--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
   </style>
   <body>
     <div class="container sticky-top" style="background-color: white;">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary py-4 ">
+      <nav class="navbar navbar-expand-lg bg-body-white py-4 ">
         <div class="container-fluid d-flex justify-content-center align-items-center">
-          <a class="navbar-brand fw-bold">WMCC 2024</a>
+          <a href="/" class="navbar-brand fw-bold" style="color: green; padding-right: 10px;">WMCC 2024</a>
+          <button class="navbar-toggler" id="navbar-toggler-button" type="button">
           <button class="navbar-toggler" id="navbar-toggler-button" type="button">
             <span class="navbar-toggler-icon"></span>
           </button>
