--- a/index.html
+++ b/index.html
@@ -1196,7 +1196,7 @@
               <!-- <p class="text-white fw-400" style="font-size: 14px;">
                 IF YOU WANT TO PARTICIPATE IN THIS CONFERENCE <br> OR WANT TO SPONSOR THIS CAUSE, CONTACT US 
               </p> -->
-              <p class="text-white fw-400">If you want to participate in this conference or want to sponsor this cause, contact us</p>
+              <p class="text-white fw-400">Contact Us</p>
               <p class="text-white fw-normal">
                 <ion-icon name="call-outline"></ion-icon>
                 <a href="tel:+9745714994" class="text-white">9745714994</a> | <a href="tel:+9863426226" class="text-white">9863426226</a><br>
