--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                                   <img src="./photos/helicopter.jpg" alt="" class="bd-placeholder-img card-img-top" width="210" height="auto">
                                   <div class="card-body text-start mt-2">
                                     <span style="font-weight: 700; font-style: normal;">Phurba Gyalsen Sherpa</span><br>
-                                    <span style="font-weight: 400; font-style: normal; font-size: 14px;">Chairman, Heli Everest</span>
+                                    <span style="font-weight: 400; font-style: normal; font-size: 14px;">Managing Director, Heli Everest</span>
                                   </div>
                                 </div>
                               </div>
