--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                                 <div class="card shadow-sm">
                                   <img src="./photos/subha.jpg" alt="" class="bd-placeholder-img card-img-top" width="210" height="auto">
                                   <div class="card-body text-start mt-2">
-                                    <span style="font-weight: 700; font-style: normal;">Subha Laxmi Shrestha <span style="color: red;">(TBC)</span></span><br>
+                                    <span style="font-weight: 700; font-style: normal;">Subha Laxmi Shrestha <span style="color: red;"></span></span><br>
 
                                     <span style="font-weight: 500; font-style: normal; font-size: 14px;">Moderator</span><br>
                                     <span style="font-weight: 400; font-style: normal; font-size: 14px;">Dep Director 
