--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <h1 class="fw-bold">BACKGROUND ON WASTE & CLIMATE</h1> -->
             <div class="d-flex gap-5">
               <h1 class="fw-bold">BACKGROUND ON WASTE AND CLIMATE</h1>
-              <div class="line"></div>
+<!--               <div class="line"></div> -->
             </div>
             <p class="text-body-primary" style="width: 90%; font-size: 18px; text-align: left;">In Nepal, the pressing issues of waste mismanagement and climate change intersect to create urgent challenges. Each year, 12 lakh kilos of waste find their way into landfills, despite an estimated 70% being recyclable. In Kathmandu, where the air quality index reached a staggering 206 AQI as of April 2024, the health implications are dire. Beyond urban confines, the alarming rate of Himalayan glacier melt - a billion metric tons annually - threatens water security for over a billion people in Asia. Against this backdrop, our conference seeks to unite stakeholders in a transformative dialogue, pioneering solutions for a sustainable future where waste is managed responsibly and the climate is safeguarded for generations to come.</p>
           </div>
