--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
             <p class="text-body-primary" style="width: 90%; font-size: 18px;">Be part of the inaugural session of our conference, where esteemed leaders and experts from diverse sectors come together to initiate a pivotal dialogue. Together, we commence our journey towards addressing the pressing challenges of waste management and climate change, with a shared dedication to shaping a sustainable future for Nepal and beyond.</p>
           </div>
-          <img src="Inagurations/inagurationfinal.png" alt="">
+          <img src="Inagurations/latest1.png" alt="">
         </div>       
         </section>
       </section>
@@ -271,7 +271,7 @@
           <div class="all_detail">
             <div class="container">
               <div class="row justify-content-center mt-3">
-                <img src="Inagurations/closingfinal.png" alt="" class="img-fluid">
+                <img src="Inagurations/latest2.png" alt="" class="img-fluid">
               </div>
             </div>
           </div>
