--- a/index.html
+++ b/index.html
@@ -4,12 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WMCC - Program Schedule</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-ZenhBwCWYvztJCujLtAN9C0zBLhSklnLthYh3ncjlKrnvNLn9SRz7/vVMzpwVrEU"
+      crossorigin="anonymous"
+    />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      .image-container {
+        max-width: 100%;
+        max-height: 100vh;
+        overflow: hidden;
+      }
+      .image-container img {
+        width: 100%;
+        height: auto;
+      }
+    </style>
   </head>
   <body>
-    <img src="Images/schedule.jpeg" alt="" />
-    <img src="Images/logos.jpeg" alt="" />
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 d-flex justify-content-center image-container">
+          <img
+            src="Images/schedule.jpeg"
+            alt="WMCC Program Schedule"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-12 d-flex justify-content-center mt-3 image-container">
+          <img src="Images/logos.jpeg" alt="WMCC Logos" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-bskAUcGYuTetBHNCvMpAsieqsxEUjMHKstwOUBbtCWH+LwziVaEAaCTHV7lCYfwka"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
+
 <!-- <!doctype html>
 <html lang="en">
   <head>
